src/objects/Risk_Country__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Requirement 758: This will be compared with Opportunity&apos;s country field</description>
    <fields>
        <fullName>Country__c</fullName>
        <description>758 :Name of the country to be specified</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtremeRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Countries Falling into extreme risk zone</description>
        <label>ExtremeRisk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HighRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Countries Falling into High risk zone</description>
        <label>HighRisk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISO_Code__c</fullName>
        <description>Req 758</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ISO Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LowRisk__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Countries falling into Low Risk Zone.</description>
        <label>LowRisk</label>
        <type>Checkbox</type>
    </fields>
    <label>Risk Country</label>
    <listViews>
        <fullName>All_Country</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>SETUP_TYPE</columns>
        <columns>SETUP_OWNER_NAME</columns>
        <columns>Country__c</columns>
        <columns>ExtremeRisk__c</columns>
        <columns>HighRisk__c</columns>
        <columns>ISO_Code__c</columns>
        <columns>LowRisk__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Country</label>
        <language>en_US</language>
    </listViews>
</CustomObject>